Created moving background. Started actual game creation.

--- a/test.html
+++ b/test.html
@@ -5,9 +5,9 @@
         <title>SLX Shooter</title>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">
-        <link rel="stylesheet" type="text/css" href="/main.css" />
-        <script type="text/javascript" src="/jquery.js"></script>
-        <script type="text/javascript" src="/projects/hydrogen/apps/helium/main.js"></script>
+        <link rel="stylesheet" type="text/css" href="main.css" />
+        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
         <div id="body">
