--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
         <div id="body">
             <h1>Project Helium</h1>
             <p>
-                Welcome to Project Helium.
+                Welcome to Project Helium. Use up,down,left,right to control the ship.
             </p>
             <br />
           	<canvas id="helium"></canvas>
