--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">
         <link rel="stylesheet" type="text/css" href="main.css" />
-        <script type="text/javascript" src="jquery.js"></script>
         <script type="text/javascript" src="compiled.js"></script>
     </head>
     <body>
         <div id="body">
             <h1>Project Helium</h1>
-            <p>
-                Welcome to Project Helium. Use up,down,left,right to control the ship.
-            </p>
             <br />
-	    <canvas id="helium"></canvas>
+	    <div id="canvas">
+		<canvas id="helium"></canvas>
+	    </div>
         </div>
     </body>
 </html>
