--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <div id="body">
-            <h1>Project Helium</h1>
+	    <a href="/">
+		<h1>Project Helium</h1>
+	    </a>
             <br />
 	    <div id="canvas">
 		<canvas id="helium"></canvas>
