--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">
         <link rel="stylesheet" type="text/css" href="main.css" />
-        <script type="text/javascript" src="compiled.js"></script>
+        <script type="text/javascript" src="scripts/jquery.min.js"></script>
+	<script type="text/javascript" src="scripts/cvars.js"></script>
+	<script type="text/javascript" src="scripts/cengine.js"></script>
+	<script type="text/javascript" src="scripts/cgame.js"></script>
     </head>
     <body>
         <div id="body">
