--- a/test.html
+++ b/test.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">
         <link rel="stylesheet" type="text/css" href="main.css" />
-        <script type="text/javascript" src="jquery.js"></script>
-        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="scripts/jquery.js"></script>
+        <script type="text/javascript" src="scripts/vars.js"></script>
+	<script type="text/javascript" src="scripts/engine.js"></script>
+	<script type="text/javascript" src="scripts/game.js"></script>
     </head>
     <body>
         <div id="body">
