--- a/Chrome App/index.html
+++ b/Chrome App/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="main.css" />
         <script type="text/javascript" src="scripts/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/cvars.js"></script>
+	<script type="text/javascript" src="scripts/clevels.js"></script>
 	<script type="text/javascript" src="scripts/cengine.js"></script>
 	<script type="text/javascript" src="scripts/cgame.js"></script>
     </head>
