Still debugging sine wave

--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="scripts/levels.js"></script>
         <script type="text/javascript" src="scripts/vars.js"></script>
 	<script type="text/javascript" src="scripts/engine.js"></script>
-	<script type="text/javascript" src="scripts/game.js"></script>
+	<script type="text/javascript" src="scripts/debug.js"></script>
     </head>
     <body>
         <div id="body">
