--- a/Chrome App/index.html
+++ b/Chrome App/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>SLX Shooter</title>
+        <title>Project Helium</title>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">
         <link rel="stylesheet" type="text/css" href="main.css" />
