--- a/paid.html
+++ b/paid.html
@@ -1,2 +1,30 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Project Helium</title>
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">
+        <link rel="stylesheet" type="text/css" href="main.css" />
+        <script type="text/javascript" src="scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="scripts/cvars.js"></script>
+        <script type="text/javascript" src="scripts/pvars.js"></script>
+        <script type="text/javascript" src="scripts/clevels.js"></script>
+        <script type="text/javascript" src="scripts/plevels.js"></script>
+        <script type="text/javascript" src="scripts/cengine.js"></script>
+        <script type="text/javascript" src="scripts/pengine.js"></script>
+	<script type="text/javascript" src="scripts/pgame.js"></script>
+    </head>
+    <body>
+        <div id="body">
+	    <a href="/">
+		<h1>Project Helium</h1>
+	    </a>
+            <br />
+	    <div id="canvas">
+		<canvas id="helium"></canvas>
+	    </div>
+        </div>
+    </body>
+</html>
 
