Added high score and last score to game. Added pause capability. Various other tweaks.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
 	    <a href="/">
 		<h1>Project Helium</h1>
 	    </a>
+	    <p>Press ESC to pause game. Follow onscreen instructions to play.</p>
             <br />
 	    <div id="canvas">
 		<canvas id="helium"></canvas>
+	    </div>
+	    <br />
+	    <div id="stats">
+		<p id="topScore"></p>
+		<p id="lastScore"></p>
 	    </div>
         </div>
     </body>
