--- a/test.html
+++ b/test.html
@@ -19,7 +19,11 @@
                 Welcome to Project Helium. Use up,down,left,right to control the ship.
             </p>
             <br />
-	    <canvas id="helium"></canvas>
+	    <canvas id="helium" tabindex="1"></canvas>
+	    <div id="stats">
+		<p id="topScore"></p>
+		<p id="lastScore"></p>
+	    </div>
         </div>
     </body>
 </html>
