Worked on layout and added links. Also adds a laser every time an enemy is hit.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
 		<p id="lastScore"></p>
 	    </div>
         </div>
+	<ul id="info">
+	    <li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a> | </li>
+	    <li><a href="http://superlinkx.dyndns.org/blog">Blog</a> | </li>
+	    <li><a href="http://superlinkx.dyndns.org/">Homepage</a></li>
+	</ul>
     </body>
 </html>
