Added local fonts, increased canvas size to 480x800, added more level attributes, tweaked interface to work with new size, other minor tweaks.

--- a/Source/Source/index.html
+++ b/Source/Source/index.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Project Helium</title>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">
         <link rel="stylesheet" type="text/css" href="main.css" />
-        <script type="text/javascript" src="scripts/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/cvars.js"></script>
 	<script type="text/javascript" src="scripts/clevels.js"></script>
 	<script type="text/javascript" src="scripts/cengine.js"></script>
@@ -30,8 +27,7 @@
         </div>
 	<ul id="info">
 	    <li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a> | </li>
-	    <li><a href="http://superlinkx.dyndns.org/blog">Blog</a> | </li>
-	    <li><a href="http://superlinkx.dyndns.org/">Homepage</a></li>
+	    <li><a href="http://superlinkx.blogspot.com">Blog</a>
 	</ul>
     </body>
 </html>
