--- a/Source/Source/test.html
+++ b/Source/Source/test.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">-->
         <link rel="stylesheet" type="text/css" href="main.css" />
         <script type="text/javascript" src="scripts/vars.js"></script>
+	<script type="text/javascript" src="scripts/levels.js"></script>
 	<script type="text/javascript" src="scripts/engine.js"></script>
 	<script type="text/javascript" src="scripts/game.js"></script>
     </head>
