Added experimental fullscreen support and switched to arrow keys and space bar for default controls

--- a/Source/Source/index.html
+++ b/Source/Source/index.html
@@ -21,6 +21,7 @@
 	    </div>
 	    <br />
 	    <div id="stats">
+		<p class="button"><a onclick="javascript:fullscreen()">Full Screen (experimental)</a></p>
 		<p id="topScore"></p>
 		<p id="lastScore"></p>
 	    </div>
