Fixed css issues. Also, in testing full screen mode, I found that pausing and click to continue do not currently work in full screen.

--- a/Source/Source/index.html
+++ b/Source/Source/index.html
@@ -21,7 +21,7 @@
 	    </div>
 	    <br />
 	    <div id="stats">
-		<p class="button"><a onclick="javascript:fullscreen()">Full Screen (experimental)</a></p>
+		<a onclick="javascript:fullscreen()"><p class="button">Full Screen (experimental)</p></a>
 		<p id="topScore"></p>
 		<p id="lastScore"></p>
 	    </div>
