--- a/Source/Source/test.html
+++ b/Source/Source/test.html
@@ -20,7 +20,7 @@
             <br />
 	    <canvas id="helium" tabindex="1"></canvas>
 	    <div id="stats">
-		<p class="button"><a onclick="javascript:fullscreen()">Full Screen</a></p>
+		<a onclick="javascript:fullscreen()"><p class="button">Full Screen (experimental)</p></a>
 		<p id="topScore"></p>
 		<p id="lastScore"></p>
 	    </div>
