--- a/Source/Source/index.html
+++ b/Source/Source/index.html
@@ -17,7 +17,7 @@
 	    <p>Press ESC to pause game. Follow onscreen instructions to play.</p>
             <br />
 	    <div id="canvas">
-		<canvas id="helium"></canvas>
+		<canvas id="helium" tabindex="1"></canvas>
 	    </div>
 	    <br />
 	    <div id="stats">
