Made enemies, player, and lasers into objects, making code more flexible. Also fixed pausing issue.

--- a/Source/Source/test.html
+++ b/Source/Source/test.html
@@ -16,7 +16,9 @@
                 Welcome to Project Helium. Use up,down,left,right to control the ship.
             </p>
             <br />
-	    <canvas id="helium" tabindex="1"></canvas>
+	    <div id="canvas">
+		<canvas id="helium" tabindex="1"></canvas>
+	    </div>
 	    <div id="stats">
 		<a onclick="javascript:fullscreen()"><p class="button">Full Screen (experimental)</p></a>
 		<p id="topScore"></p>
