--- a/Chrome/Free App/index.html
+++ b/Chrome/Free App/index.html
@@ -14,7 +14,7 @@
 	    <a href="/">
 		<h1>Project Helium</h1>
 	    </a>
-	    <p>Press ESC to pause game. Follow onscreen instructions to play.</p>
+	    <p>Press p to pause game. Follow onscreen instructions to play.</p>
             <br />
 	    <div id="canvas">
 		<canvas id="helium" tabindex="1"></canvas>
