Minor style updates

--- a/Source/Source/test.html
+++ b/Source/Source/test.html
@@ -20,7 +20,7 @@
 		<canvas id="helium" tabindex="1"></canvas>
 	    </div>
 	    <div id="stats">
-		<a onclick="javascript:fullscreen()"><p class="button">Full Screen (experimental)</p></a>
+		<p class="button"><a onclick="javascript:fullscreen()">Full Screen (experimental)</a></p>
 		<p id="topScore"></p>
 		<p id="lastScore"></p>
 	    </div>
