--- a/Source/Source/index.html
+++ b/Source/Source/index.html
@@ -11,24 +11,22 @@
     </head>
     <body>
         <div id="body">
-	    <a href="/">
-		<h1>Project Helium</h1>
-	    </a>
-	    <p>Press p to pause game. Follow onscreen instructions to play.</p>
+	    	<h1><a href="/">Project Helium</a></h1>
+	    	<p>Press p to pause game. Follow on-screen instructions to play.</p>
             <br />
-	    <div id="canvas">
-		<canvas id="helium" tabindex="1"></canvas>
-	    </div>
-	    <br />
-	    <div id="stats">
-		<a onclick="javascript:fullscreen()"><p class="button">Full Screen (experimental)</p></a>
-		<p id="topScore"></p>
-		<p id="lastScore"></p>
-	    </div>
+	    	<div id="canvas">
+				<canvas id="helium" tabindex="1"></canvas>
+	    	</div>
+	    	<br />
+	    	<div id="stats">
+				<p class="button"><a onclick="javascript:fullscreen()">Full Screen (experimental)</a></p>
+				<p id="topScore"></p>
+				<p id="lastScore"></p>
+	    	</div>
         </div>
-	<ul id="info">
-	    <li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a> | </li>
-	    <li><a href="http://superlinkx.blogspot.com">Blog</a>
-	</ul>
+		<ul id="info">
+	    	<li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a> | </li>
+	    	<li><a href="http://superlinkx.blogspot.com">Blog</a>
+		</ul>
     </body>
 </html>
