--- a/Source/Source/index.html
+++ b/Source/Source/index.html
@@ -12,7 +12,7 @@
     <body>
         <div id="body">
 	    	<h1><a href="/">Project Helium</a></h1>
-	    	<p>Press p to pause game. Follow on-screen instructions to play.</p>
+	    	<p>Press / to pause game. Follow on-screen instructions to play.</p>
             <br />
 	    	<div id="canvas">
 				<canvas id="helium" tabindex="1"></canvas>
