--- a/Source/Source/test.html
+++ b/Source/Source/test.html
@@ -18,10 +18,11 @@
         <title>SLX Shooter</title>
         <link rel="stylesheet" type="text/css" href="css/main.css" />
         <script type="text/javascript" src="scripts/vars.js"></script>
-	<script type="text/javascript" src="scripts/levels.js"></script>
-	<script type="text/javascript" src="scripts/engine.js"></script>
-	<script type="text/javascript" src="scripts/game.js"></script>
-    </head>
+		<script type="text/javascript" src="scripts/levels.js"></script>
+		<script type="text/javascript" src="scripts/engine.js"></script>
+		<script type="text/javascript" src="scripts/ui.js"></script>
+		<script type="text/javascript" src="scripts/game.js"></script>
+	</head>
     <body>
         <div id="body">
             <h1>Project Helium</h1>
