--- a/Source/Source/index.html
+++ b/Source/Source/index.html
@@ -17,10 +17,11 @@
         <meta charset="utf-8" />
         <title>Project Helium</title>
         <link rel="stylesheet" type="text/css" href="css/main.css" />
-	<script type="text/javascript" src="scripts/cvars.js"></script>
-	<script type="text/javascript" src="scripts/clevels.js"></script>
-	<script type="text/javascript" src="scripts/cengine.js"></script>
-	<script type="text/javascript" src="scripts/cgame.js"></script>
+		<script type="text/javascript" src="scripts/cvars.js"></script>
+		<script type="text/javascript" src="scripts/clevels.js"></script>
+		<script type="text/javascript" src="scripts/cengine.js"></script>
+		<script type="text/javascript" src="scripts/cui.js"></script>
+		<script type="text/javascript" src="scripts/cgame.js"></script>
     </head>
     <body>
         <div id="body">
