Fixed fallback mode. Now everything moves the same speed in each mode, just choppier in fallback

--- a/Chrome/Free App/index.html
+++ b/Chrome/Free App/index.html
@@ -21,22 +21,26 @@
     </head>
     <body>
         <div id="body">
-			<h1><a href="/">Project Helium</a></h1>
-			<p>Press / to pause game. Follow on-screen instructions to play.</p>
-		    <br />
+            <h1>Project Helium</h1>
+            <p>
+                Welcome to Project Helium. Use up,down,left,right to control the ship.
+            </p>
+            <br />
 			<div id="canvas">
 				<canvas id="helium" tabindex="1"></canvas>
 			</div>
-			<br />
 			<div id="stats">
 				<p class="button"><a onclick="javascript:fullscreen()">Full Screen (experimental)</a></p>
+				<p class="button"><a onclick="javascript:toggle_fallback()">Fallback<br />(use if slow)</a></p>
+				<br style="clear: both;" />
 				<p id="topScore"></p>
 				<p id="lastScore"></p>
 			</div>
         </div>
+		<br />
 		<ul id="info">
 		    <li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a> | </li>
-		    <li><a href="http://superlinkx.blogspot.com">Blog</a>
+		    <li><a href="http://superlinkx.blogspot.com">Blog</a></li>
 		</ul>
     </body>
 </html>
