--- a/Source/Source/test.html
+++ b/Source/Source/test.html
@@ -35,9 +35,16 @@
 			</div>
 			<div id="stats">
 				<p class="button"><a onclick="javascript:fullscreen()">Full Screen (experimental)</a></p>
+				<p class="button"><a onclick="javascript:toggle_fallback()">Fallback<br />(use if slow)</a></p>
+				<br style="clear: both;" />
 				<p id="topScore"></p>
 				<p id="lastScore"></p>
 			</div>
         </div>
+		<br />
+		<ul id="info">
+		    <li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a> | </li>
+		    <li><a href="http://superlinkx.blogspot.com">Blog</a></li>
+		</ul>
     </body>
 </html>
