--- a/Source/Source/index.html
+++ b/Source/Source/index.html
@@ -39,7 +39,7 @@
         </div>
 		<br />
 		<ul id="info">
-		    <li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a> | </li>
+		    <li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a></li> | 
 		    <li><a href="http://superlinkx.blogspot.com">Blog</a></li>
 		</ul>
     </body>
