Major rewrite. Fixed ghost issue (for reals this time).

--- a/Source/Source/test.html
+++ b/Source/Source/test.html
@@ -15,7 +15,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>SLX Shooter</title>
+        <title>Project Helium *TEST*</title>
         <link rel="stylesheet" type="text/css" href="css/main.css" />
         <script type="text/javascript" src="scripts/vars.js"></script>
 		<script type="text/javascript" src="scripts/levels.js"></script>
