--- a/Source/Source/test.html
+++ b/Source/Source/test.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
-<!-- Copyright 2011 Steven Holms <superlinkx@gmail.com>
-*
-*   Licensed under the Apache License, Version 2.0 (the "License");
-*   you may not use this file except in compliance with the License.
-*   You may obtain a copy of the License at
-*
-*       http://www.apache.org/licenses/LICENSE-2.0
-*
-*   Unless required by applicable law or agreed to in writing, software
-*   distributed under the License is distributed on an "AS IS" BASIS,
-*   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-*   See the License for the specific language governing permissions and
-*   limitations under the License. -->
+<!--Copyright 2011 Steven Holms <superlinkx@gmail.com>
+*	Licensed under the Apache License, Version 2.0 (the "License");
+*	you may not use this file except in compliance with the License.
+*	You may obtain a copy of the License at
+*	http://www.apache.org/licenses/LICENSE-2.0
+*	Unless required by applicable law or agreed to in writing, software
+*	distributed under the License is distributed on an "AS IS" BASIS,
+*	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+*	See the License for the specific language governing permissions and
+*	limitations under the License.-->
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Project Helium *TEST*</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css" />
-        <script type="text/javascript" src="scripts/vars.js"></script>
+	<head>
+		<meta charset="utf-8" />
+		<title>Project Helium *TEST*</title>
+		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<script type="text/javascript" src="scripts/jquery.min.js"></script>
+		<script type="text/javascript" src="scripts/vars.js"></script>
 		<script type="text/javascript" src="scripts/levels.js"></script>
 		<script type="text/javascript" src="scripts/engine.js"></script>
 		<script type="text/javascript" src="scripts/ui.js"></script>
 		<script type="text/javascript" src="scripts/game.js"></script>
 	</head>
-    <body>
-        <div id="body">
-            <h1>Project Helium</h1>
-            <p>
-                Welcome to Project Helium. Use up,down,left,right to control the ship.
-            </p>
-            <br />
-			<div id="canvas">
-				<canvas id="helium" tabindex="1"></canvas>
+	<body>
+		<div id="body">
+			<h1>Project Helium</h1>
+			<p>Welcome to Project Helium. Use up,down,left,right to control the ship.</p>
+			<br />
+			<div id="canvasContainer">
+				<canvas id="helium"></canvas>
+				<img id="restart" src="images/restart.svg" onclick="javascript:restartGame();" />
+				<img id="pause" src="images/pause.svg" onclick="javascript:pauseGame();" />
 			</div>
 			<div id="stats">
-				<p class="button"><a onclick="javascript:fullscreen()">Full Screen (experimental)</a></p>
-				<p class="button"><a onclick="javascript:toggle_fallback()">Fallback<br />(use if slow)</a></p>
+				<p class="button"><a id="fullscreen" onclick="javascript:fullscreen()">Full Screen</a></p>
+				<p class="button"><a id="fallback" onclick="javascript:toggle_fallback()">SD Version</a></p>
 				<br style="clear: both;" />
 				<p id="topScore"></p>
 				<p id="lastScore"></p>
+				<p id="err"></p>
 			</div>
-        </div>
+		</div>
 		<br />
 		<ul id="info">
-		    <li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a></li> | 
-		    <li><a href="http://superlinkx.blogspot.com">Blog</a></li>
+			<li><a href="https://chrome.google.com/webstore/detail/ahmcpjdobpmhmcmjnphpmpchhbnlpecm">Chrome Web Store</a></li> |
+			<li><a href="http://superlinkx.blogspot.com">Blog</a></li>
 		</ul>
-    </body>
+	</body>
 </html>
