--- a/Source/NewSource/index.html
+++ b/Source/NewSource/index.html
@@ -17,14 +17,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>SLX Shooter</title>
+        <title>Project Helium</title>
         <link rel="stylesheet" type="text/css" href="css/main.css" />
-        <script type="text/javascript" src="scripts/vars.js"></script>
-		<script type="text/javascript" src="scripts/levels.js"></script>
-		<script type="text/javascript" src="scripts/engine.js"></script>
-		<script type="text/javascript" src="scripts/ui.js"></script>
-		<script type="text/javascript" src="scripts/game.js"></script>
-	</head>
+		<script type="text/javascript" src="scripts/cgame.js"></script>
+    </head>
     <body>
         <div id="body">
             <h1>Project Helium</h1>
