Cleaned up Source/

--- a/Source/NewSource/test.html
+++ b/Source/NewSource/test.html
@@ -20,8 +20,23 @@
 		<title>Project Helium *TEST*</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
 		<script type="text/javascript" src="scripts/jquery.min.js"></script>
+		<!-- Engine -->
 		<script type="text/javascript" src="scripts/engine/vars.js"></script>
-		<script type="text/javascript" src="scripts/engine/engine.js"></script>
+		<script type="text/javascript" src="scripts/engine/main.js"></script>
+		<script type="text/javascript" src="scripts/engine/background.js"></script>
+		<script type="text/javascript" src="scripts/engine/collisions.js"></script>
+		<script type="text/javascript" src="scripts/engine/controls.js"></script>
+		<script type="text/javascript" src="scripts/engine/lasers.js"></script>
+		<script type="text/javascript" src="scripts/engine/resets.js"></script>
+		<!-- Player -->
+		<script type="text/javascript" src="scripts/player/main.js"></script>
+		<!-- Enemies -->
+		<script type="text/javascript" src="scripts/enemies/main.js"></script>
+		<script type="text/javascript" src="scripts/enemies/paths.js"></script>
+		<script type="text/javascript" src="scripts/enemies/type1.js"></script>
+		<script type="text/javascript" src="scripts/enemies/type2.js"></script>
+		<script type="text/javascript" src="scripts/enemies/type3.js"></script>
+		<!-- Levels -->
 		<script type="text/javascript" src="scripts/levels/load.js"></script>
 		<script type="text/javascript" src="scripts/levels/level1.js"></script>
 		<script type="text/javascript" src="scripts/levels/level2.js"></script>
@@ -33,8 +48,10 @@
 		<script type="text/javascript" src="scripts/levels/level8.js"></script>
 		<script type="text/javascript" src="scripts/levels/level9.js"></script>
 		<script type="text/javascript" src="scripts/levels/level10.js"></script>
-		<script type="text/javascript" src="scripts/ui/ui.js"></script>
-		<script type="text/javascript" src="scripts/game.js"></script>
+		<!-- UI -->
+		<script type="text/javascript" src="scripts/ui/main.js"></script>
+		<!-- Game Declarations -->
+		<script type="text/javascript" src="scripts/game/main.js"></script>
 	</head>
 	<body>
 		<div id="body">
