Moved engine into its components.

--- a/Source/NewSource/test.html
+++ b/Source/NewSource/test.html
@@ -29,27 +29,27 @@
 		<script type="text/javascript" src="scripts/engine/lasers.js"></script>
 		<script type="text/javascript" src="scripts/engine/resets.js"></script>
 		<!-- Player -->
-		<script type="text/javascript" src="scripts/player/main.js"></script>
+		<script type="text/javascript" src="scripts/engine/player/main.js"></script>
 		<!-- Enemies -->
-		<script type="text/javascript" src="scripts/enemies/main.js"></script>
-		<script type="text/javascript" src="scripts/enemies/paths.js"></script>
-		<script type="text/javascript" src="scripts/enemies/type1.js"></script>
-		<script type="text/javascript" src="scripts/enemies/type2.js"></script>
-		<script type="text/javascript" src="scripts/enemies/type3.js"></script>
+		<script type="text/javascript" src="scripts/engine/enemies/main.js"></script>
+		<script type="text/javascript" src="scripts/engine/enemies/paths.js"></script>
+		<script type="text/javascript" src="scripts/engine/enemies/type1.js"></script>
+		<script type="text/javascript" src="scripts/engine/enemies/type2.js"></script>
+		<script type="text/javascript" src="scripts/engine/enemies/type3.js"></script>
 		<!-- Levels -->
-		<script type="text/javascript" src="scripts/levels/load.js"></script>
-		<script type="text/javascript" src="scripts/levels/level1.js"></script>
-		<script type="text/javascript" src="scripts/levels/level2.js"></script>
-		<script type="text/javascript" src="scripts/levels/level3.js"></script>
-		<script type="text/javascript" src="scripts/levels/level4.js"></script>
-		<script type="text/javascript" src="scripts/levels/level5.js"></script>
-		<script type="text/javascript" src="scripts/levels/level6.js"></script>
-		<script type="text/javascript" src="scripts/levels/level7.js"></script>
-		<script type="text/javascript" src="scripts/levels/level8.js"></script>
-		<script type="text/javascript" src="scripts/levels/level9.js"></script>
-		<script type="text/javascript" src="scripts/levels/level10.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/load.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level1.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level2.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level3.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level4.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level5.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level6.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level7.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level8.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level9.js"></script>
+		<script type="text/javascript" src="scripts/game/levels/level10.js"></script>
 		<!-- UI -->
-		<script type="text/javascript" src="scripts/ui/main.js"></script>
+		<script type="text/javascript" src="scripts/game/ui/main.js"></script>
 		<!-- Game Declarations -->
 		<script type="text/javascript" src="scripts/game/main.js"></script>
 	</head>
