Updated Enemy class. Now is self contained and reads properties from external templates. WIP

--- a/Source/NewSource/test.html
+++ b/Source/NewSource/test.html
@@ -27,7 +27,6 @@
 		<script type="text/javascript" src="scripts/engine/collisions.js"></script>
 		<script type="text/javascript" src="scripts/engine/controls.js"></script>
 		<script type="text/javascript" src="scripts/engine/lasers.js"></script>
-		<script type="text/javascript" src="scripts/engine/resets.js"></script>
 		<!-- Player -->
 		<script type="text/javascript" src="scripts/engine/player/main.js"></script>
 		<!-- Enemies -->
@@ -51,6 +50,7 @@
 		<!-- UI -->
 		<script type="text/javascript" src="scripts/game/ui/main.js"></script>
 		<!-- Game Declarations -->
+		<script type="text/javascript" src="scripts/game/resets.js"></script>
 		<script type="text/javascript" src="scripts/game/main.js"></script>
 	</head>
 	<body>
