Removed the old NewSource. Fixing the codebase was too much work. Now rewriting, using OldSource as a guideline.
Currently have Player, Engine, Enemy, and Background running. Those classes need to be expanded,
Laser needs to be created, and various game elements need to be hooked in as well (fullscreen, SD version, Pause, Menu)

--- a/Source/NewSource/index.html
+++ b/Source/NewSource/index.html
@@ -29,7 +29,7 @@
 			<p>Welcome to Project Helium. Use up,down,left,right to control the ship.</p>
 			<br />
 			<div id="canvasContainer">
-				<canvas id="helium"></canvas>
+				<canvas id="game"></canvas>
 				<img id="restart" src="images/restart.svg" onclick="javascript:restartGame();" />
 				<img id="pause" src="images/pause.svg" onclick="javascript:pauseGame();" />
 			</div>
