--- a/Source/NewSource/test.html
+++ b/Source/NewSource/test.html
@@ -25,6 +25,7 @@
 		<script type="text/javascript" src="scripts/engine/player.js"></script>
 		<script type="text/javascript" src="scripts/engine/enemy.js"></script>
 		<script type="text/javascript" src="scripts/engine/background.js"></script>
+		<script type="text/javascript" src="scripts/engine/weapon.js"></script>
 		<!-- Game -->
 		<script type="text/javascript">
 				var global_path = "";
@@ -32,6 +33,7 @@
 		<script type="text/javascript" src="scripts/game/enemies/etype1.js"></script>
 		<script type="text/javascript" src="scripts/game/enemies/paths.js"></script>
 		<script type="text/javascript" src="scripts/game/player/ptype1.js"></script>
+		<script type="text/javascript" src="scripts/game/weapons/player_laser.js"></script>
 		<script type="text/javascript" src="scripts/game/game.js"></script>
 	</head>
 	<body>
