Added basis for Sprite parsing and creation

--- a/Source/NewSource/test.html
+++ b/Source/NewSource/test.html
@@ -21,8 +21,10 @@
 		<link rel="stylesheet" type="text/css" href="res/css/main.css" />
 		<script type="text/javascript" src="src/ext/jquery.min.js"></script>
 		<script type="text/javascript" src="src/engine/"></script>
-		<script type="text/javascript" src="src/engine/main/"></script>
-		<script type="text/javascript" src="src/engine/audio/"></script>
+		<script type="text/javascript" src="src/engine/main/MainEngine.js"></script>
+		<script type="text/javascript" src="src/engine/main/graphics/Sprites.js"></script>
+		<script type="text/javascript" src="src/engine/main/physics"></script>
+		<script type="text/javascript" src="src/engine/audio/AudioEngine.js"></script>
 		<script type="text/javascript" src="src/logic/"></script>
 		<script type="text/javascript" src="src/logic/init"></script>
 		<script type="text/javascript" src="src/logic/loop"></script>
