Testing Sprite generation and deletion

--- a/Source/NewSource/test.html
+++ b/Source/NewSource/test.html
@@ -23,10 +23,11 @@
 		<script type="text/javascript" src="src/engine/"></script>
 		<script type="text/javascript" src="src/engine/main/MainEngine.js"></script>
 		<script type="text/javascript" src="src/engine/main/graphics/Sprites.js"></script>
+		<script type="text/javascript" src="src/engine/main/graphics/Sprite.js"></script>
 		<script type="text/javascript" src="src/engine/main/physics"></script>
 		<script type="text/javascript" src="src/engine/audio/AudioEngine.js"></script>
 		<script type="text/javascript" src="src/logic/"></script>
-		<script type="text/javascript" src="src/logic/init"></script>
+		<script type="text/javascript" src="src/logic/init/objects/Enemy1.js"></script>
 		<script type="text/javascript" src="src/logic/loop"></script>
 		<script type="text/javascript" src="src/ui/"></script>
 		<script type="text/javascript" src="src/controls/"></script>
