--- a/Source/NewSource/test.html
+++ b/Source/NewSource/test.html
@@ -24,6 +24,7 @@
 		<script type="text/javascript" src="src/engine/main/MainEngine.js"></script>
 		<script type="text/javascript" src="src/engine/main/graphics/Sprites.js"></script>
 		<script type="text/javascript" src="src/engine/main/graphics/Sprite.js"></script>
+		<script type="text/javascript" src="src/engine/main/graphics/Sheet.js"></script>
 		<script type="text/javascript" src="src/engine/main/physics"></script>
 		<script type="text/javascript" src="src/engine/audio/AudioEngine.js"></script>
 		<script type="text/javascript" src="src/logic/"></script>
