--- a/Source/NewSource/index.html
+++ b/Source/NewSource/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<!-- Copyright 2011 Steven Holms <superlinkx@gmail.com>
+<!--
+* Copyright 2012 Steven Holms <superlinkx@gmail.com>
+* Copyright 2012 Reuben Lifshay <rlifshay+gc@gmail.com>
 *
 *	MIT License:
 *	
@@ -14,6 +16,7 @@
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
 * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
 * OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+*/
 -->
 <html>
 	<head>
