--- a/Source/NewSource/test.html
+++ b/Source/NewSource/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- Copyright 2011 Steven Holms <superlinkx@gmail.com>
+<!-- Copyright 2012 Steven Holms <superlinkx@gmail.com>
+* Copyright 2012 Reuben Lifshay <rlifshay+gc@gmail.com>
 *
 *	MIT License:
 *	
